2015-05-08  Joseph Myers  <joseph@codesourcery.com>

	* math/auto-libm-test-in: Add more tests of csqrt, lgamma, log10
	and sinh.
	* math/auto-libm-test-out: Regenerated.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2015-05-08  Carlos O'Donell  <carlos@redhat.com>

	[BZ #18125]
	* stdlib/tst-setcontext3.c: New file.
	* stdlib/tst-setcontext3.sh: New file.
	* stdlib/Makefile (tests): Add tst-setcontext3.
	(tst-setcontext3.out): Custom rule to run tst-setcontext3.sh
	to verify test program created output file.
	* sysdeps/unix/sysv/linux/aarch64/setcontext.S: Call exit.
	* sysdeps/unix/sysv/linux/arm/setcontext.S: Likewise.
	* sysdeps/unix/sysv/linux/hppa/setcontext.S: Likewise.
	* sysdeps/unix/sysv/linux/nios2/setcontext.S: Likewise.

2015-05-06  Roland McGrath  <roland@hack.frob.com>

	[BZ #18383]
	* elf/tst-tlsalign.c: New file.
	* elf/tst-tlsalign-static.c: New file.
	* elf/tst-tlsalign-lib.c: New file.
	* elf/Makefile [$(build-shared) = yes] (tests): Add tst-tlsalign.
	(tests-static): Add tst-tlsalign-static.
	(modules-names): Add tst-tlsalign-lib.
	(test-xfail-tst-tlsalign): New variable.
	(test-xfail-tst-tlsalign-static): New variable.

	* sysdeps/nacl/nacl-test-wrapper.sh (NACL_LOADER):
	Use elf_loader_${arch}.nexe rather than loader_${arch}.nexe.

2015-05-06  Joseph Myers  <joseph@codesourcery.com>

	* math/auto-libm-test-in: Add more tests of acosh, atanh, cos,
	csqrt, erfc, sin and sincos.
	* math/auto-libm-test-out: Regenerated.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2015-05-06  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	* sysdeps/aarch64/libm-test-ulps: Update.

2015-05-05  Joseph Myers  <joseph@codesourcery.com>

	* math/auto-libm-test-in: Add more tests of acosh, atanh, clog,
	clog10, csqrt, erfc, exp2, expm1, log10, log2 and sinh.
	* math/auto-libm-test-out: Regenerated.
	* sysdeps/i386/fpu/libm-test-ulps: Update.